Update margin style for Sample Test Blueprint header

--- a/Index.html
+++ b/Index.html
@@ -665,7 +665,7 @@
   </div>
 
   <div class="glg"></div>
-  <div class="sh sh-p2b" style="margin-bottom:8px;"><h3>Sample Test Blueprint — Recommended Item Mix (Maritime Programs)</h3></div>
+  <div class="sh sh-p2c" style="margin-bottom:10px;"><h3>Sample Test Blueprint — Recommended Item Mix (Maritime Programs)</h3></div>
   <table class="bp no-break">
     <thead><tr><td>Item Type</td><td>% of Test</td><td>Cognitive Level(s)</td><td>Suggested Use in Maritime Courses</td></tr></thead>
     <tbody>
